feat: se adiciono endpoint para la obtención de usuarios registrados
