# swagger.json
@@ -3906,37 +3906,7 @@
         ]
       }
     },
-    "/usuarios-registrados/{id}": {
-      "get": {
-        "operationId": "UsuariosRegistradosController_obtenerUsuarioRegistrado",
-        "parameters": [
-          {
-            "name": "id",
-            "required": true,
-            "in": "path",
-            "schema": {
-              "example": "12",
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": ""
-          }
-        },
-        "security": [
-          {
-            "bearer": []
-          }
-        ],
-        "summary": "API para obtener los datos de un usuario",
-        "tags": [
-          "Usuarios Registrados"
-        ]
-      }
-    },
-    "/usuarios-registrados/{rol}": {
+    "/usuarios-registrados/rol/{rol}": {
       "get": {
         "operationId": "UsuariosRegistradosController_listar",
         "parameters": [
@@ -4004,6 +3974,36 @@
           }
         ],
         "summary": "API para listar usuarios por rol",
+        "tags": [
+          "Usuarios Registrados"
+        ]
+      }
+    },
+    "/usuarios-registrados/{id}": {
+      "get": {
+        "operationId": "UsuariosRegistradosController_obtenerUsuarioRegistrado",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "example": "12",
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "security": [
+          {
+            "bearer": []
+          }
+        ],
+        "summary": "API para obtener los datos de un usuario",
         "tags": [
           "Usuarios Registrados"
         ]
